<resources>
    <string name="app_name">Health Tracker</string>
    <string name="zero">0</string>
    <string name="steps_today">Steps Today</string>
    <string name="calories_today">Calories Today</string>
    <string name="track_workout">Track Workout</string>
    <string name="track_meal">Track Meal</string>
    <string name="view_history">View History</string>
    <string name="view_stats">View Stats</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_to_meal">Add to Meal</string>
    <string name="new_food">New Food</string>
    <string name="name_of_meal">Name of Meal</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="create_new_meal">+ Create New Meal</string>
    <string name="create_new_food">+ Create New Food</string>
    <string name="food_name">Food Name</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="sugar">Sugar</string>
    <string name="zero_grams">0.0g</string>
    <string name="zero_mg">0.0mg</string>
    <string name="name">Name</string>
    <string name="minus_1">-1</string>
    <string name="calories_colon">Calories: </string>
    <string name="carbohydrates_colon">Carbohydrates: </string>
    <string name="fat_colon">Fat: </string>
    <string name="protein_colon">Protein: </string>
    <string name="sodium_colon">Sodium: </string>
    <string name="sugar_colon">Sugar: </string>

    <string-array name="meal_types">
        <item>Other</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Tea/Supper</item>
    </string-array>
</resources>
