<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/food_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textStyle="bold" />


    <GridLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/food_row_sub"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/calories_colon" />

        <TextView
            android:id="@+id/num_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/zero" />


        <TextView
            style="@style/food_row_sub"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/carbohydrates_colon" />

        <TextView
            android:id="@+id/num_carbohyrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/zero_grams" />

        <TextView
            style="@style/food_row_sub"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/fat_colon" />

        <TextView
            android:id="@+id/num_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/zero_grams" />

        <TextView
            style="@style/food_row_sub"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/protein_colon" />

        <TextView
            android:id="@+id/num_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/zero_grams" />

        <TextView
            style="@style/food_row_sub"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/sodium_colon" />

        <TextView
            android:id="@+id/num_sodium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/zero_mg" />

        <TextView
            style="@style/food_row_sub"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/sugar_colon" />

        <TextView
            android:id="@+id/num_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/zero_grams" />

        <TextView
            android:id="@+id/food_id"
            android:visibility="gone" />

    </GridLayout>
</LinearLayout>
